// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarm Renders \`alarm\` widget settings with all rights 1`] = `
<widget-settings-stub>
  <field-title-stub
    value=""
  />
  <hr
    class="v-divider theme--light"
  />
  <field-periodic-refresh-stub
    value="[object Object]"
  />
  <hr
    class="v-divider theme--light"
  />
  <widget-settings-group-stub
    title="Advanced settings"
  >
    <field-default-sort-column-stub
      columns="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
      columnslabel="Column name"
      value="[object Object]"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-columns-stub
      columns="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
      label="Column names"
      template="Symbol(custom)"
      templates=""
      type="alarm"
      withcolorindicator="true"
      withhtml="true"
      withtemplate="true"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-columns-stub
      columns="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
      label="Column names for meta alarms"
      template="Symbol(custom)"
      templates=""
      type="alarm"
      withcolorindicator="true"
      withhtml="true"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-columns-stub
      columns="[object Object],[object Object]"
      label="Track alarm source columns"
      template="Symbol(custom)"
      templates=""
      type="entity"
      withcolorindicator="true"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-default-elements-per-page-stub
      value="10"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-density-stub
      name="dense"
      value="0"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-opened-resolved-filter-stub
      value="true"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-filters-stub
      addable="true"
      editable="true"
      filters=""
      widgetid="3f8dba7c-f39e-42ae-912c-e78cb39669c5"
      withalarm="true"
      withentity="true"
      withpbehavior="true"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-remediation-instructions-filters-stub
      addable="true"
      editable="true"
      filters=""
    />
    <hr
      class="v-divider theme--light"
    />
    <field-switcher-stub
      title="Disable possibility to clear selected filter"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-live-reporting-stub
      value="[object Object]"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-info-popup-stub
      columns="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
      popups=""
    />
    <hr
      class="v-divider theme--light"
    />
    <field-text-editor-with-template-stub
      addable="true"
      removable="true"
      template="Symbol(custom)"
      templates=""
      title="\\"More Infos\\" Popup"
      value=""
      variables="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-grid-range-size-stub
      max="12"
      min="0"
      step="1"
      title="Expand card (more infos / timeline) width"
      value="0,12"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-switcher-stub
      title="HTML enabled on timeline?"
    />
    <hr
      class="v-divider theme--light"
    />
    <widget-settings-group-stub
      title="Ack"
    >
      <field-switcher-stub
        title="Note field required when ack?"
      />
      <hr
        class="v-divider theme--light"
      />
      <field-switcher-stub
        title="Multiple ack"
      />
      <hr
        class="v-divider theme--light"
      />
      <field-fast-ack-output-stub
        value="[object Object]"
      />
    </widget-settings-group-stub>
    <hr
      class="v-divider theme--light"
    />
    <field-switcher-stub
      title="Note field required when snooze?"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-switcher-stub
      title="Multiple declare ticket"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-number-stub
      title="Inline links count"
      value="3"
    />
    <hr
      class="v-divider theme--light"
    />
    <export-csv-form-stub
      datetimeformat="true"
      form="[object Object]"
      templates=""
      type="alarm"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-switcher-stub
      title="Sticky header"
    />
  </widget-settings-group-stub>
  <hr
    class="v-divider theme--light"
  />
</widget-settings-stub>
`;

exports[`alarm Renders \`alarm\` widget settings with custom props 1`] = `
<widget-settings-stub>
  <field-title-stub
    value="Alarms list"
  />
  <hr
    class="v-divider theme--light"
  />
  <field-periodic-refresh-stub
    value="[object Object]"
  />
  <hr
    class="v-divider theme--light"
  />
  <widget-settings-group-stub
    title="Advanced settings"
  >
    <field-default-sort-column-stub
      columns="[object Object]"
      columnslabel="Column name"
      value="[object Object]"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-columns-stub
      columns="[object Object]"
      label="Column names"
      template="Symbol(custom)"
      templates=""
      type="alarm"
      withcolorindicator="true"
      withhtml="true"
      withtemplate="true"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-columns-stub
      columns="[object Object]"
      label="Column names for meta alarms"
      template="Symbol(custom)"
      templates=""
      type="alarm"
      withcolorindicator="true"
      withhtml="true"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-columns-stub
      columns="[object Object]"
      label="Track alarm source columns"
      template="Symbol(custom)"
      templates=""
      type="entity"
      withcolorindicator="true"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-default-elements-per-page-stub
      value="12"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-density-stub
      name="dense"
      value="0"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-opened-resolved-filter-stub
      value="true"
    />
    <hr
      class="v-divider theme--light"
    />
    <!---->
    <!---->
    <field-switcher-stub
      title="Disable possibility to clear selected filter"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-live-reporting-stub
      value="[object Object]"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-info-popup-stub
      columns="[object Object]"
      popups=""
    />
    <hr
      class="v-divider theme--light"
    />
    <field-text-editor-with-template-stub
      addable="true"
      removable="true"
      template="Symbol(custom)"
      templates=""
      title="\\"More Infos\\" Popup"
      value="More info template"
      variables="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-grid-range-size-stub
      max="12"
      min="0"
      step="1"
      title="Expand card (more infos / timeline) width"
      value="1,11"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-switcher-stub
      title="HTML enabled on timeline?"
      value="true"
    />
    <hr
      class="v-divider theme--light"
    />
    <widget-settings-group-stub
      title="Ack"
    >
      <field-switcher-stub
        title="Note field required when ack?"
        value="true"
      />
      <hr
        class="v-divider theme--light"
      />
      <field-switcher-stub
        title="Multiple ack"
        value="true"
      />
      <hr
        class="v-divider theme--light"
      />
      <field-fast-ack-output-stub
        value="[object Object]"
      />
    </widget-settings-group-stub>
    <hr
      class="v-divider theme--light"
    />
    <field-switcher-stub
      title="Note field required when snooze?"
      value="true"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-switcher-stub
      title="Multiple declare ticket"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-number-stub
      title="Inline links count"
      value="3"
    />
    <hr
      class="v-divider theme--light"
    />
    <export-csv-form-stub
      datetimeformat="true"
      form="[object Object]"
      templates=""
      type="alarm"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-switcher-stub
      title="Sticky header"
      value="true"
    />
  </widget-settings-group-stub>
  <hr
    class="v-divider theme--light"
  />
</widget-settings-stub>
`;

exports[`alarm Renders \`alarm\` widget settings with default props 1`] = `
<widget-settings-stub>
  <field-title-stub
    value=""
  />
  <hr
    class="v-divider theme--light"
  />
  <field-periodic-refresh-stub
    value="[object Object]"
  />
  <hr
    class="v-divider theme--light"
  />
  <widget-settings-group-stub
    title="Advanced settings"
  >
    <field-default-sort-column-stub
      columns="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
      columnslabel="Column name"
      value="[object Object]"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-columns-stub
      columns="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
      label="Column names"
      template="Symbol(custom)"
      templates=""
      type="alarm"
      withcolorindicator="true"
      withhtml="true"
      withtemplate="true"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-columns-stub
      columns="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
      label="Column names for meta alarms"
      template="Symbol(custom)"
      templates=""
      type="alarm"
      withcolorindicator="true"
      withhtml="true"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-columns-stub
      columns="[object Object],[object Object]"
      label="Track alarm source columns"
      template="Symbol(custom)"
      templates=""
      type="entity"
      withcolorindicator="true"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-default-elements-per-page-stub
      value="10"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-density-stub
      name="dense"
      value="0"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-opened-resolved-filter-stub
      value="true"
    />
    <hr
      class="v-divider theme--light"
    />
    <!---->
    <!---->
    <field-switcher-stub
      title="Disable possibility to clear selected filter"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-live-reporting-stub
      value="[object Object]"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-info-popup-stub
      columns="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
      popups=""
    />
    <hr
      class="v-divider theme--light"
    />
    <field-text-editor-with-template-stub
      addable="true"
      removable="true"
      template="Symbol(custom)"
      templates=""
      title="\\"More Infos\\" Popup"
      value=""
      variables="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-grid-range-size-stub
      max="12"
      min="0"
      step="1"
      title="Expand card (more infos / timeline) width"
      value="0,12"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-switcher-stub
      title="HTML enabled on timeline?"
    />
    <hr
      class="v-divider theme--light"
    />
    <widget-settings-group-stub
      title="Ack"
    >
      <field-switcher-stub
        title="Note field required when ack?"
      />
      <hr
        class="v-divider theme--light"
      />
      <field-switcher-stub
        title="Multiple ack"
      />
      <hr
        class="v-divider theme--light"
      />
      <field-fast-ack-output-stub
        value="[object Object]"
      />
    </widget-settings-group-stub>
    <hr
      class="v-divider theme--light"
    />
    <field-switcher-stub
      title="Note field required when snooze?"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-switcher-stub
      title="Multiple declare ticket"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-number-stub
      title="Inline links count"
      value="3"
    />
    <hr
      class="v-divider theme--light"
    />
    <export-csv-form-stub
      datetimeformat="true"
      form="[object Object]"
      templates=""
      type="alarm"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-switcher-stub
      title="Sticky header"
    />
  </widget-settings-group-stub>
  <hr
    class="v-divider theme--light"
  />
</widget-settings-stub>
`;
